# bounty-check

./: LICENSE  README.md  bounty_check.py  pyproject.toml
.github/workflows/: test.yml
assets/: make_logo.py  make_preview.py
tests/: test_bounty_check.py
