[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bounty-check"
version = "1.1.0"
description = "Check whether a GitHub bounty issue is actually still claimable before you waste time on it"
readme = "README.md"
license = "MIT"
authors = [{ name = "Wren Castellan" }]
requires-python = ">=3.9"
keywords = ["github", "bounty", "open-source", "cli"]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/wren-castellan/bounty-check"
Issues = "https://github.com/wren-castellan/bounty-check/issues"

[project.scripts]
bounty-check = "bounty_check:main"

[tool.hatch.build.targets.wheel]
include = ["bounty_check.py"]
